# llm_telegram_bot

./: .gitignore  Dockerfile  Makefile  bot.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  example.env  pyproject.toml  requirements.txt  user_context_manager.py
.github/workflows/: develop.yml  stable.yml
src/: bot.py  check_ip.py  config.py  filters.py  main.py  models.py  service.py  user_manager.py
src/app/: chat_manager.py  database.py  llm_provider.py  message_repo.py  service.py  user_manager.py
src/tools/: AnthropicModelCustom.py  chat_state.py  check_ip.py  custom_logging.py  exceptions.py  filters.py  log.py  message_queue.py  pagination.py  pdf_tool.py  update_getters.py
src/tools/tracekit/: __init__.py  config.py  handlers.py  logger.py  redact.py  request_context.py  telegram_notify.py  trace.py
