[project]
name = "llm-telegram-bot"
version = "0.1.0"
description = "telegram bot for access LLM via chat"
authors = ["Evgeniy Korzunov <korzunov.e.v@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "anthropic>=0.60.0",
    "langchain-text-splitters>=0.3.9",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[anthropic,openai]>=0.4.11",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.13.2",
    "python-telegram-bot[job-queue]>=22.3",
    "requests>=2.32.4",
    "telegramify-markdown>=0.5.1",
    "tiktoken>=0.9.0",
]
